--- a/src/App.css
+++ b/src/App.css
@@ -51,13 +51,14 @@
 
 .card {
   padding: 2em;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .read-the-docs {
   color: #888;
 }
 
-
+/* ---------- newsletter ---------- */
 /* agregado*/
 /* Imagen redonda del newsletter */
 /* Avatar del newsletter: tamaño fijo y recorte */
@@ -81,3 +82,56 @@
   display: block;
 }
 
+/* Newsletter estilo tarjeta */
+.newsletter-card {
+  background-color: white; /* fondo blanco */
+  box-shadow: 0 15px 42px rgba(0,0,0,0.15); /* sombra suave */
+}
+
+/*ACA*/
+/* --- Sección con ondas --- */
+.wave-wrap {}
+
+.wave-top svg {
+  display: block;
+  width: 100%;
+  height: 64px;    /* alto de la onda */
+}
+
+
+.wave-bottom svg {
+  transform: rotate(180deg);
+  display: block;
+  width: 100%;
+  height: 64px;    /* alto de la onda */
+}
+
+.wave-body {
+  
+  background: #dcf8eaff;  /* mismo verde que el SVG */
+  padding: .2rem 0;      /* alto del bloque */
+  color: #000000;
+}
+
+.wave-body .card {
+  border-radius: .8rem;
+}
+
+/* ---------- Product card ---------- */
+.btn.btn-verde {
+  background-color: #366d44 !important; /* verde oscuro */
+  color: white !important;
+  border: none;
+  
+}
+
+.btn.btn-verde:hover {
+  background-color: #4f9d60 !important; /* verde un poco más claro */
+  color: white !important;
+}
+
+.card:hover {
+  transform: translateY(-8px); /* sube 7px */
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); /* sombra más profunda */
+ 
+}
