--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ html, body, #root {
   display: flex;
   flex-direction: column;
 }
+
+/* Tipografía global */
+body {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.6;
+  color: #333;
+}
+
+/* Opcional: títulos más pesados */
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700;
+}
