Cambios en las vistas de 'ProductPage' y 'ProductDetailPage'

--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,7 @@
 
 /* ---------- Product card ---------- */
 .btn.btn-verde {
-  background-color: #366d44 !important; /* verde oscuro */
+  background-color: #05934E !important; /* verde oscuro */
   color: white !important;
   border: none;
   
