Modificamos el Sobre Nosotros agergando diseño y la tarjeta de instagram

--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,10 @@
 .read-the-docs {
   color: #888;
 }
+ /* Evita que el texto se quiebre en ciertas partes */
+.no-wrap {
+  white-space: nowrap;
+}
 
 /* ---------- newsletter ---------- */
 /* agregado*/
