--- a/src/views/ProductPage.css
+++ b/src/views/ProductPage.css
@@ -40,6 +40,7 @@
 .product-page-container {
   padding-top: 2rem; /* Espacio después de la onda */
   background-color: #ffffff;
+  margin-bottom: 3rem;
 }
 
 
