--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,12 +1,9 @@
-/* src/components/NavBar.css */
-
 .navbar-nav .nav-link.nav-link-hover {
-  position: relative; /* Necesario para el pseudo-elemento */
-  padding-bottom: 0.5rem; /* Espacio para la línea */
-  transition: color 0.2s ease-in-out; /* Transición suave de color */
+  position: relative;
+  padding-bottom: 0.5rem;
+  transition: color 0.2s ease-in-out;
 }
 
-/* La línea de abajo (pseudo-elemento ::after) */
 .navbar-nav .nav-link.nav-link-hover::after {
   content: '';
   position: absolute;
@@ -14,29 +11,24 @@
   left: 50%; /* Empieza en el centro */
   width: 0; /* Empieza invisible */
   height: 2px; /* Grosor de la línea */
-  background-color: var(--bs-primary); /* Color verde */
+  background-color: var(--bs-primary);
   transition: all 0.3s ease-in-out; /* Animación suave */
   transform: translateX(-50%); /* Asegura que crezca desde el centro */
 }
 
 /* Al pasar el mouse por encima del link */
 .navbar-nav .nav-link.nav-link-hover:hover::after,
-.navbar-nav .nav-link.nav-link-hover.active::after { /* También si está activo */
-  width: 60%; /* Ancho final de la línea (ajusta si querés) */
+.navbar-nav .nav-link.nav-link-hover.active::after { 
+  width: 60%;
 }
 
 .navbar-nav .nav-link.nav-link-hover:hover {
-  color: var(--bs-dark); /* Color del texto al pasar el mouse (opcional) */
+  color: var(--bs-dark); /* Color del texto al pasar el mouse*/
 }
 
-/* Estilo para el nombre de usuario */
+/* Estilo para el mail del usuario */
 .navbar-user-display {
     display: flex;
     align-items: center;
-    gap: 0.5rem; /* Espacio entre ícono y nombre */
-}
-
-.btn btn-outline-primary btn-sm{
-    color: #05934E;
-    background-color: #05934E;
+    gap: 0.5rem; /* Espacio entre ícono y mail */
 }
